tests/errors/macro/parser_incorrect_ident_name/incorrect_last_symbol.c
#define f- 2 - 

int main()
{
	return 0;
}
